service-a-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: service-a
  type: LoadBalancer
