service-b-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: service-b
  type: LoadBalancer
