ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: service-a.host
    http:
      paths:
      - backend:
          serviceName: service-a
          servicePort: 80
  - host: service-b.host
    http:
      paths:
      - backend:
          serviceName: service-b
          servicePort: 80
